--- a/src/src/main/resources/application.properties
+++ b/src/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=ZenCartopia
+
+server.port = 5454
+
+logging.level.org.springframework.security=DEBUG
+
+spring.security.user.name=vishrut
+spring.security.user.password=kevadiya
+
+spring.datasource.url=jdbc:mysql://localhost:3306/zencartopia_ecommerce
+spring.datasource.username=root
+spring.datasource.password=Root1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql: true
